Fix display of overlay on small window

--- a/app/less/layer.less
+++ b/app/less/layer.less
@@ -16,7 +16,7 @@ div.layer {
   left:50%;
   top:15%;
   width:60%;
-  min-width:300px;
+  min-width:400px;
   min-height:300px;
   padding:30px;
   background-color:#FFF;
